hphp/test/slow/array/array_call.php.expectf

Fatal error: calling an ill-formed array without resolved object/class pointer in %s/array_call.php on line 11
